fix bug with not stretching posts

--- a/client/src/sass/css/posts.css
+++ b/client/src/sass/css/posts.css
@@ -5,7 +5,8 @@
     margin-top: 30px;
     gap: 15px;
     width: 100%;
-    height: 100px;
+    min-height: 100px;
+    margin-bottom: 30px;
 }
 
 @media (min-width: 576px){
