--- a/client/src/sass/login.scss
+++ b/client/src/sass/login.scss
@@ -1,12 +1,6 @@
 @import "./colors";
 @import "./mixins";
 
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
-
 .login {
 	display: flex;
 	justify-content: center;
