--- a/client/src/sass/profiles.scss
+++ b/client/src/sass/profiles.scss
@@ -2,12 +2,14 @@
 @import "./colors";
 
 .profiles{
+    position: relative;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    // margin-bottom: 30px;
 
-    &__shadow {
+  &__shadow {
 		display: none;
 	}
 
